--- a/arch/arm64/configs/exynos9830-c2sxxx_defconfig
+++ b/arch/arm64/configs/exynos9830-c2sxxx_defconfig
@@ -466,17 +466,13 @@ CONFIG_UH=y
 CONFIG_FASTUH_RKP=y
 # CONFIG_UH_DEBUG is not set
 # CONFIG_UH_RKP is not set
-CONFIG_UH_RKP_FIMC_CHECK=y
-CONFIG_KDP_CRED=y
-CONFIG_KDP_NS=y
-CONFIG_KDP_DMAP=y
-CONFIG_UH_LKM_BLOCK=y
-CONFIG_UH_PDBT=y
+# CONFIG_UH_RKP_FIMC_CHECK is not set
+# CONFIG_KDP_CRED is not set
+# CONFIG_UH_LKM_BLOCK is not set
+# CONFIG_UH_PDBT is not set
 # CONFIG_UH_PDBT_STATIC is not set
-CONFIG_RKP_CFP=y
-CONFIG_RKP_CFP_JOPP=y
-CONFIG_RKP_CFP_JOPP_MAGIC=0x00be7bad
-# CONFIG_RKP_CFP_TEST is not set
+# CONFIG_RKP_CFP is not set
+# CONFIG_RKP_CFP_JOPP is not set
 CONFIG_COMPAT=y
 
 #
@@ -880,8 +876,8 @@ CONFIG_INET_DIAG_DESTROY=y
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
-CONFIG_TCP_CONG_WESTWOOD=m
-CONFIG_TCP_CONG_HTCP=m
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_HTCP=y
 # CONFIG_TCP_CONG_HSTCP is not set
 # CONFIG_TCP_CONG_HYBLA is not set
 # CONFIG_TCP_CONG_VEGAS is not set
@@ -901,6 +897,8 @@ CONFIG_TCP_CONG_WVEGAS=y
 # CONFIG_TCP_CONG_MCTCPDESYNC is not set
 CONFIG_DEFAULT_BIC=y
 # CONFIG_DEFAULT_CUBIC is not set
+# CONFIG_DEFAULT_HTCP is not set
+# CONFIG_DEFAULT_WESTWOOD is not set
 # CONFIG_DEFAULT_LIA is not set
 # CONFIG_DEFAULT_OLIA is not set
 # CONFIG_DEFAULT_WVEGAS is not set
@@ -3407,7 +3405,7 @@ CONFIG_MALI_DEBUG_KERNEL_SYSFS=y
 CONFIG_MALI_EXYNOS_SECURE_RENDERING=y
 CONFIG_MALI_SEC_JOB_STATUS_CHECK=y
 CONFIG_MALI_SUSTAINABLE_OPT=y
-CONFIG_MALI_KUTF=m
+# CONFIG_MALI_KUTF is not set
 CONFIG_MALI_REAL_HW=y
 # CONFIG_MALI_DMA_BUF_MAP_ON_DEMAND is not set
 CONFIG_MALI_DMA_BUF_LEGACY_COMPAT=y
@@ -5747,16 +5745,8 @@ CONFIG_SEC_PM_CPUFREQ=y
 # CONFIG_SENSORS_MAX86915 is not set
 CONFIG_SENSORS_TCS3407=y
 # CONFIG_SENSORS_VD6281 is not set
-CONFIG_FIVE_TEE_DRIVER=y
-# CONFIG_FIVE_USE_EMULATOR is not set
-CONFIG_FIVE_USE_TZDEV=y
-# CONFIG_TEE_DRIVER_DEBUG is not set
-# CONFIG_FIVE_EARLY_LOAD_TRUSTED_APP is not set
-CONFIG_ICD=y
-CONFIG_ICD_USE_TZDEV=y
-CONFIG_GATOR=m
-# CONFIG_GATOR_DO_NOT_ONLINE_CORES_AT_STARTUP is not set
-CONFIG_KPERFMON=y
+# CONFIG_GATOR is not set
+# CONFIG_KPERFMON is not set
 CONFIG_TZIC=y
 CONFIG_TZIC_USE_TZDEV=y
 # CONFIG_TZIC_DEFAULT is not set
@@ -6054,22 +6044,10 @@ CONFIG_INTEGRITY_TRUSTED_KEYRING=y
 CONFIG_INTEGRITY_AUDIT=y
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
-CONFIG_FIVE=y
-# CONFIG_FIVE_DEBUG is not set
-CONFIG_FIVE_CERT_USER="x509_five_user.der"
-CONFIG_FIVE_DEFAULT_HASH_SHA1=y
-# CONFIG_FIVE_DEFAULT_HASH_SHA256 is not set
-# CONFIG_FIVE_DEFAULT_HASH_SHA512 is not set
-CONFIG_FIVE_DEFAULT_HASH="sha1"
-CONFIG_FIVE_TRUSTED_KEYRING=y
-CONFIG_PROCA=y
-CONFIG_GAF=y
-# CONFIG_GAF_V3 is not set
-# CONFIG_GAF_V4 is not set
-# CONFIG_GAF_V5 is not set
-CONFIG_GAF_V6=y
+# CONFIG_FIVE is not set
+# CONFIG_GAF is not set
 CONFIG_SECURITY_DSMS=y
-CONFIG_SECURITY_DEFEX=y
+# CONFIG_SECURITY_DEFEX is not set
 # CONFIG_DEFEX_KERNEL_ONLY is not set
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_DAC is not set
