Fix WiFi firmware path

--- a/arch/arm64/configs/exynos9830-c2sxxx_defconfig
+++ b/arch/arm64/configs/exynos9830-c2sxxx_defconfig
@@ -2121,8 +2121,9 @@ CONFIG_BCM4375=y
 # CONFIG_BCM43455 is not set
 # CONFIG_BCM4334W is not set
 # CONFIG_BCM43454 is not set
-CONFIG_BCMDHD_FW_PATH="/etc/wifi/bcmdhd_sta.bin"
-CONFIG_BCMDHD_NVRAM_PATH="/etc/wifi/nvram_net.txt"
+CONFIG_BCMDHD_CLM_PATH="/vendor/etc/wifi/bcmdhd_clm.blob"
+CONFIG_BCMDHD_FW_PATH="/vendor/etc/wifi/bcmdhd_sta.bin"
+CONFIG_BCMDHD_NVRAM_PATH="/vendor/etc/wifi/nvram.txt"
 CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
 CONFIG_WLAN_REGION_CODE=100
 CONFIG_WLAIBSS=y
@@ -6018,7 +6019,7 @@ CONFIG_SECURITY_SELINUX=y
 # CONFIG_SECURITY_SELINUX_BOOTPARAM is not set
 # CONFIG_SECURITY_SELINUX_DISABLE is not set
 CONFIG_SECURITY_SELINUX_DEVELOP=y
-CONFIG_SECURITY_SELINUX_AVC_STATS=y
+# CONFIG_SECURITY_SELINUX_AVC_STATS is not set
 CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=0
 # CONFIG_SECURITY_SMACK is not set
 # CONFIG_SECURITY_TOMOYO is not set
