--- a/arch/arm64/configs/exynos9830-c2sxxx_defconfig
+++ b/arch/arm64/configs/exynos9830-c2sxxx_defconfig
@@ -207,11 +207,14 @@ CONFIG_HAVE_PERF_EVENTS=y
 CONFIG_PERF_EVENTS=y
 # CONFIG_DEBUG_PERF_USE_VMALLOC is not set
 CONFIG_VM_EVENT_COUNTERS=y
-CONFIG_SLUB_DEBUG=y
+# CONFIG_SLUB_DEBUG is not set
+# CONFIG_SLUB_DEBUG_ON is not set
+# CONFIG_SLUB_DEBUG_PANIC_ON is not set
 # CONFIG_SLUB_MEMCG_SYSFS_ON is not set
 # CONFIG_COMPAT_BRK is not set
 # CONFIG_SLAB is not set
 CONFIG_SLUB=y
+CONFIG_SLUB_CPU_PARTIAL=y
 # CONFIG_SLOB is not set
 CONFIG_SLAB_MERGE_DEFAULT=y
 # CONFIG_SLAB_FREELIST_RANDOM is not set
@@ -489,10 +492,10 @@ CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
 # CONFIG_PM_WAKELOCKS_GC is not set
 CONFIG_PM=y
-CONFIG_PM_DEBUG=y
+# CONFIG_PM_DEBUG is not set
 # CONFIG_PM_ADVANCED_DEBUG is not set
 # CONFIG_PM_TEST_SUSPEND is not set
-CONFIG_PM_SLEEP_DEBUG=y
+# CONFIG_PM_SLEEP_DEBUG is not set
 # CONFIG_DPM_WATCHDOG is not set
 CONFIG_PM_CLK=y
 CONFIG_PM_GENERIC_DOMAINS=y
@@ -878,6 +881,10 @@ CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
 CONFIG_TCP_CONG_WESTWOOD=y
 CONFIG_TCP_CONG_HTCP=y
+CONFIG_TCP_CONG_BBR=y
+CONFIG_DEFAULT_BBR2=y
+CONFIG_TCP_CONG_BBR2=y
+CONFIG_DEFAULT_TCP_CONG="bbr2"
 # CONFIG_TCP_CONG_HSTCP is not set
 # CONFIG_TCP_CONG_HYBLA is not set
 # CONFIG_TCP_CONG_VEGAS is not set
@@ -903,7 +910,6 @@ CONFIG_DEFAULT_BIC=y
 # CONFIG_DEFAULT_OLIA is not set
 # CONFIG_DEFAULT_WVEGAS is not set
 # CONFIG_DEFAULT_RENO is not set
-CONFIG_DEFAULT_TCP_CONG="bic"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
 CONFIG_IPV6_ROUTER_PREF=y
@@ -1481,7 +1487,7 @@ CONFIG_MCPS_GRO_ENABLE=y
 CONFIG_MCPS_DEBUG_PRINTK=3
 # CONFIG_MQTCP_DEBUG_PRINTK is not set
 # CONFIG_MCPS_DEBUG_SYSTRACE is not set
-CONFIG_MCPS_DEBUG=y
+# CONFIG_MCPS_DEBUG is not set
 CONFIG_MCPS_CHUNK_GRO=y
 # CONFIG_MCPS_ICB is not set
 CONFIG_MCPS_V2=y
@@ -3386,7 +3392,7 @@ CONFIG_MALI_EXPERT=y
 # CONFIG_MALI_CORESTACK is not set
 # CONFIG_MALI_PLATFORM_POWER_DOWN_ONLY is not set
 # CONFIG_MALI_DEBUG is not set
-CONFIG_MALI_FENCE_DEBUG=y
+# CONFIG_MALI_FENCE_DEBUG is not set
 # CONFIG_MALI_NO_MALI is not set
 # CONFIG_MALI_SYSTEM_TRACE is not set
 # CONFIG_MALI_2MB_ALLOC is not set
@@ -3398,7 +3404,7 @@ CONFIG_EXYNOS_SOC_NAME="9830"
 CONFIG_MALI_DVFS=y
 CONFIG_MALI_RT_PM=y
 CONFIG_MALI_EXYNOS_TRACE=y
-CONFIG_MALI_DEBUG_SYS=y
+# CONFIG_MALI_DEBUG_SYS is not set
 CONFIG_MALI_SEC_CL_BOOST=y
 CONFIG_MALI_PM_QOS=y
 # CONFIG_MALI_BTS_OPTIMIZATION is not set
@@ -4381,7 +4387,7 @@ CONFIG_MMC_DW_PLTFM=y
 # CONFIG_MMC_DW_BLUEFIELD is not set
 CONFIG_MMC_DW_EXYNOS=y
 # CONFIG_MMC_DW_HI3798CV200 is not set
-CONFIG_MMC_DW_DEBUG=y
+# CONFIG_MMC_DW_DEBUG is not set
 CONFIG_MMC_DW_FORCE_32BIT_SFR_RW=y
 # CONFIG_MMC_DW_K3 is not set
 # CONFIG_MMC_DW_PCI is not set
@@ -4701,7 +4707,7 @@ CONFIG_STAGING=y
 CONFIG_ASHMEM=y
 # CONFIG_ANDROID_VSOC is not set
 CONFIG_SAMSUNG_FREECESS=y
-CONFIG_SAMSUNG_LMKD_DEBUG=y
+# CONFIG_SAMSUNG_LMKD_DEBUG is not set
 CONFIG_ION=y
 CONFIG_ION_EXYNOS=y
 # CONFIG_ION_TEST is not set
@@ -4710,7 +4716,7 @@ CONFIG_ION_CARVEOUT_HEAP=y
 # CONFIG_ION_CHUNK_HEAP is not set
 CONFIG_ION_CMA_HEAP=y
 CONFIG_ION_HPA_HEAP=y
-CONFIG_ION_DEBUG_EVENT_RECORD=y
+# CONFIG_ION_DEBUG_EVENT_RECORD is not set
 CONFIG_ION_RBIN_HEAP=y
 CONFIG_ION_RBIN_ONLY_FOR_UNDER_8GB=y
 CONFIG_ANDROID_SWITCH=y
@@ -5009,7 +5015,7 @@ CONFIG_EXYNOS_ALT_DVFS=y
 # DEVFREQ Drivers
 #
 CONFIG_ARM_EXYNOS_DEVFREQ=y
-CONFIG_ARM_EXYNOS_DEVFREQ_DEBUG=y
+# CONFIG_ARM_EXYNOS_DEVFREQ_DEBUG is not set
 # CONFIG_ARM_EXYNOS_BUS_DEVFREQ is not set
 # CONFIG_PM_DEVFREQ_EVENT is not set
 CONFIG_EXTCON=y
@@ -5611,7 +5617,7 @@ CONFIG_EXYNOS_DSP_EXYNOS9830=y
 CONFIG_EXYNOS_NPU=y
 CONFIG_EXYNOS_NPU_DRAM_FW_LOG_BUF=y
 CONFIG_EXYNOS_NPU_PUBLISH_NPU_BUILD_VER=y
-CONFIG_EXYNOS_NPU_DEBUG_SRAM_DUMP=y
+# CONFIG_EXYNOS_NPU_DEBUG_SRAM_DUMP is not set
 # CONFIG_EXYNOS_NPU_EXPOSE_KERNEL_ADDR is not set
 CONFIG_NPU_GOLDEN_MATCH=y
 CONFIG_NPU_ZEBU_SYSMMU=y
@@ -5690,7 +5696,7 @@ CONFIG_SEC_DEBUG_WORKQUEUE_LOCKUP_PANIC=y
 CONFIG_SEC_DEBUG_EXCEPTION_STACK=y
 CONFIG_SEC_DEBUG_INIT_EXIT_PANIC=y
 CONFIG_SEC_DEBUG_WATCHDOGD_FOOTPRINT=y
-CONFIG_SEC_DEBUG_FREQ=y
+# CONFIG_SEC_DEBUG_FREQ is not set
 CONFIG_SEC_DEBUG_DISABLE_IRQ_IN_DIE=y
 CONFIG_SEC_DEBUG_LOCKUP_INFO=y
 CONFIG_SEC_DEBUG_COMPLETE_HINT=y
@@ -5701,7 +5707,7 @@ CONFIG_SEC_DEBUG_UNFROZEN_TASK=y
 CONFIG_SEC_DEBUG_FAULT_MSG_ADV=y
 CONFIG_SEC_DEBUG_EMERG_WDT_CALLER=y
 CONFIG_SEC_DEBUG_BAD_STACK_INFO=y
-CONFIG_SEC_DEBUG_DTASK=y
+# CONFIG_SEC_DEBUG_DTASK is not set
 CONFIG_SEC_DEBUG_PM_DEVICE_INFO=y
 CONFIG_SEC_DEBUG_TASK_IN_STATE_INFO=y
 CONFIG_SEC_PERF_LATENCYCHECKER=y
@@ -5739,7 +5745,7 @@ CONFIG_VBUS_NOTIFIER=y
 # Samsung Mobile Power Management Options
 #
 CONFIG_SEC_PM=y
-CONFIG_SEC_PM_DEBUG=y
+# CONFIG_SEC_PM_DEBUG is not set
 CONFIG_SEC_PM_BIGDATA=y
 CONFIG_SEC_PM_CPUFREQ=y
 # CONFIG_SENSORS_HRMSENSOR is not set
@@ -5795,7 +5801,7 @@ CONFIG_F2FS_FS_SECURITY=y
 CONFIG_F2FS_STRICT_BUG_ON=y
 CONFIG_F2FS_FS_ENCRYPTION=y
 # CONFIG_F2FS_FAULT_INJECTION is not set
-CONFIG_F2FS_SEC_BLOCK_OPERATIONS_DEBUG=y
+# CONFIG_F2FS_SEC_BLOCK_OPERATIONS_DEBUG is not set
 # CONFIG_FS_DAX is not set
 CONFIG_FS_POSIX_ACL=y
 CONFIG_EXPORTFS=y
@@ -5861,7 +5867,7 @@ CONFIG_SDFAT_ALIGNED_MPAGE_WRITE=y
 CONFIG_SDFAT_VIRTUAL_XATTR=y
 CONFIG_SDFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
 CONFIG_SDFAT_SUPPORT_STLOG=y
-CONFIG_SDFAT_DEBUG=y
+# CONFIG_SDFAT_DEBUG is not set
 # CONFIG_SDFAT_DBG_IOCTL is not set
 CONFIG_SDFAT_DBG_MSG=y
 # CONFIG_SDFAT_DBG_BUGON is not set
@@ -6370,7 +6376,7 @@ CONFIG_FRAME_POINTER=y
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_MAGIC_SYSRQ_DEFAULT_ENABLE=0x1
 CONFIG_MAGIC_SYSRQ_SERIAL=y
-CONFIG_DEBUG_KERNEL=y
+# CONFIG_DEBUG_KERNEL is not set
 
 #
 # Memory Debugging
@@ -6416,7 +6422,7 @@ CONFIG_WQ_WATCHDOG=y
 CONFIG_PANIC_ON_OOPS=y
 CONFIG_PANIC_ON_OOPS_VALUE=1
 CONFIG_PANIC_TIMEOUT=5
-CONFIG_SCHED_DEBUG=y
+# CONFIG_SCHED_DEBUG is not set
 CONFIG_SCHED_INFO=y
 CONFIG_SCHEDSTATS=y
 # CONFIG_SCHED_STACK_END_CHECK is not set
@@ -6435,7 +6441,7 @@ CONFIG_LOCK_DEBUGGING_SUPPORT=y
 # CONFIG_DEBUG_WW_MUTEX_SLOWPATH is not set
 # CONFIG_DEBUG_RWSEMS is not set
 # CONFIG_DEBUG_LOCK_ALLOC is not set
-CONFIG_DEBUG_ATOMIC_SLEEP=y
+# CONFIG_DEBUG_ATOMIC_SLEEP is not set
 # CONFIG_DEBUG_LOCKING_API_SELFTESTS is not set
 # CONFIG_LOCK_TORTURE_TEST is not set
 # CONFIG_WW_MUTEX_SELFTEST is not set
@@ -6547,9 +6553,11 @@ CONFIG_ARCH_HAS_DEVMEM_IS_ALLOWED=y
 # CONFIG_PID_IN_CONTEXTIDR is not set
 # CONFIG_ARM64_RANDOMIZE_TEXT_OFFSET is not set
 # CONFIG_DEBUG_WX is not set
-# CONFIG_DEBUG_ALIGN_RODATA is not set
+CONFIG_DEBUG_ALIGN_RODATA=y
 # CONFIG_ARM64_RELOC_TEST is not set
 # CONFIG_CORESIGHT is not set
 CONFIG_DEBUG_SNAPSHOT=y
 CONFIG_DEBUG_SNAPSHOT_USER_MODE=y
 CONFIG_DEBUG_SNAPSHOT_CALLSTACK=4
+CONFIG_BOEFFLA_WL_BLOCKER=y
+CONFIG_DYNAMIC_FSYNC=y
